Fixed tape entry alignment

--- a/src/app/test/widgets/TapeWidget.css
+++ b/src/app/test/widgets/TapeWidget.css
@@ -2,9 +2,10 @@
   --tape-text-size: 2em;
 
   --color-tape-main: lightgray;
-  --color-tape-main-dark: darkgray;
+  --color-tape-main-dark: black;
   --color-tape-text: black;
   --color-tape-text-active: white;
+  --color-tape-accent: gold;
 
   position: relative;
   display: flex;
@@ -12,6 +13,7 @@
   font-size: var(--tape-text-size);
   margin: 1em;
   padding: 0.2em 0.4em;
+  min-height: 2em;/* entry size + pointer size */
 
   overflow-x: auto;
   overflow-y: hidden;
@@ -19,7 +21,6 @@
 /* Just some spacing, since the last border edge is cut off */
 .tape-row::after {
   content: "";
-  display: block;
   min-width: 1px;
   min-height: 1px;
 }
@@ -40,18 +41,21 @@
   margin-left: 2.4em;/* infinite width + half of entry width + row padding */
 }
 .tape-row-entry {
+  align-self: flex-end;
   display: flex;
   flex-direction: column;
   min-width: 1em;
+  border-bottom: 4px solid var(--color-tape-accent);
 }
 /* INFINITE ENTRY */
 .tape-row-entry.infinite {
   min-width: 2em;
+  border-bottom: none;
 }
 .tape-row-entry.infinite .tape-row-symbol {
   outline: none;
-  border: 1px solid var(--color-tape-text);
-  margin-bottom: -0.2em;
+  border: 1px solid var(--color-tape-main-dark);
+  margin-bottom: -0.1em;
 }
 .tape-row-entry:first-of-type.infinite .tape-row-symbol {
   border-left: none;
@@ -66,7 +70,7 @@
   text-align: center;
 
   background: var(--color-tape-main);
-  outline: 1px solid var(--color-tape-text);
+  outline: 1px solid var(--color-tape-main-dark);
 }
 .tape-row-symbol:hover {
   background: var(--color-tape-text-active);
@@ -89,6 +93,7 @@
 .tape-row-entry.active .tape-row-symbol {
   z-index: 1;/* must be higher than the rest */
   outline-width: 0.2em;
+  outline-color: var(--color-tape-accent);
   font-weight: bold;
 }
 .tape-row-entry.active-read .tape-row-states {
